# wren-engine-fork

./: .gitattributes  .gitignore
ibis-server/: build-dist.sh  justfile  pyproject.toml
ibis-server/dist-bundle/: ibis-server.service  install.sh  requirements-exact.txt  run.sh
ibis-server/dist-bundle/wheels/: GeoAlchemy2-0.17.1-py3-none-any.whl  MarkupSafe-3.0.2-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  PyYAML-6.0.2-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  aiohttp-3.12.15-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  annotated_doc-0.0.3-py3-none-any.whl  anyio-4.10.0-py3-none-any.whl  asgi_correlation_id-4.3.4-py3-none-any.whl  asn1crypto-1.5.1-py2.py3-none-any.whl  atpublic-6.0.1-py3-none-any.whl  attrs-25.3.0-py3-none-any.whl  backoff-2.2.1-py3-none-any.whl  beautifulsoup4-4.13.5-py3-none-any.whl  boto3-1.40.29-py3-none-any.whl  botocore-1.40.29-py3-none-any.whl  cachetools-5.5.2-py3-none-any.whl  certifi-2025.8.3-py3-none-any.whl  cffi-1.17.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  charset_normalizer-3.4.3-cp311-cp311-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  click-8.2.1-py3-none-any.whl  clickhouse_connect-0.8.15-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  cryptography-46.0.0-cp311-abi3-manylinux_2_34_x86_64.whl  databricks_sdk-0.73.0-py3-none-any.whl  databricks_sql_connector-4.1.4-py3-none-any.whl  datafusion-47.0.0-cp39-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  db_dtypes-1.4.3-py3-none-any.whl  dnspython-2.8.0-py3-none-any.whl  duckdb-1.3.2-cp311-cp311-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl  email_validator-2.3.0-py3-none-any.whl  et_xmlfile-2.0.0-py3-none-any.whl  fastapi-0.120.1-py3-none-any.whl  fastapi_cli-0.0.11-py3-none-any.whl  fastapi_cloud_cli-0.1.5-py3-none-any.whl  filelock-3.19.1-py3-none-any.whl  frozenlist-1.7.0-cp311-cp311-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl  fsspec-2025.9.0-py3-none-any.whl  geopandas-1.1.1-py3-none-any.whl  google_api_core-2.25.1-py3-none-any.whl  google_auth-2.38.0-py2.py3-none-any.whl  google_auth_oauthlib-1.2.2-py3-none-any.whl  google_cloud_bigquery-3.37.0-py3-none-any.whl  (+82 more)
wren-core-legacy/docker/etc/archived/: config.properties.2025120314523837157000
wren-core-legacy/etc/duckdb/: init.sql
wren-core-legacy/etc/duckdb/archived/: init.sql.20251203145237951541000
wren-core-py/: .gitattributes  pyproject.toml
wren-core-py/wren_core_wheels/: wren_core_py-0.1.0-cp311-cp311-manylinux_2_31_x86_64.whl
