[project]
name = "wren-engine"
version = "0.22.0"
description = ""
authors = [{ name = "Canner", email = "dev@cannerdata.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi[standard]==0.120.1",
    "pydantic==2.10.6",
    "ibis-framework[athena,bigquery,clickhouse,mssql,mysql,oracle,postgres,snowflake,trino,databricks] @ git+https://github.com/Canner/ibis.git@canner/10.8.1",
    "google-auth==2.38.0",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
    "orjson==3.10.16",
    "pandas==2.2.3",
    "geopandas>=1.0.1",
    "geoalchemy2>=0.17.1",
    "sqlglot[rs]>=27.8.0,<28.0.0",
    "loguru==0.7.3",
    "asgi-correlation-id==4.3.4",
    "gql[aiohttp]==3.5.2",
    "anyio==4.10.0",
    "duckdb==1.3.2",
    "opendal>=0.45",
    "oracledb==3.3.0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "uvicorn>=0.35.0",
    "gunicorn>=23.0.0",
    "uvicorn-worker>=0.3.0",
    "jinja2>=3.1.6",
    "redshift_connector==2.1.7",
    "datafusion>=47.0.0,<49.0.0",
    "starlette>=0.49.1",
    "databricks-sql-connector[pyarrow]>=4.0.1",
    "databricks-sdk>=0.73.0",
]

[project.optional-dependencies]
mysql = ["mysqlclient>=2.2.4,<3"]

[dependency-groups]
jupyter = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
]
dev = [
    "pytest==8.3.5",
    "testcontainers[clickhouse,mssql,mysql,postgres,trino,minio]==4.9.2",
    "sqlalchemy==2.0.39",
    "pre-commit==4.2.0",
    "trino>=0.321,<1",
    "psycopg2>=2.8.4,<3",
    "clickhouse-connect==0.8.15",
    "asgi-lifespan==2.1.0",
    "polars>=1.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "wren"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
addopts = ["--strict-markers"]
markers = [
  "athena: mark a test as an athena test",
  "bigquery: mark a test as a bigquery test",
  "canner: mark a test as a canner test",
  "clickhouse: mark a test as a clickhouse test",
  "functions: mark a test as a functions test",
  "mssql: mark a test as a mssql test",
  "mysql: mark a test as a mysql test",
  "oracle: mark a test  as a oracle test",
  "postgres: mark a test as a postgres test",
  "redshift: mark a test as a redshift test",
  "snowflake: mark a test as a snowflake test",
  "trino: mark a test as a trino test",
  "databricks: mark a test as a databricks test",
  "local_file: mark a test as a local file test",
  "s3_file: mark a test as a s3 file test",
  "minio_file: mark a test as a minio file test",
  "gcs_file: mark a test as a gcs file test",
  "beta: mark a test as a test for beta versions of the engine",
]
