[project]
name = "wren-core-py"
version = "0.1.0"
description = ""
authors = [{ name = "Canner", email = "dev@cannerdata.com" }]
requires-python = ">=3.11,<3.12"
classifiers = ["Programming Language :: Python :: 3.11"]
dependencies = [
    "maturin==1.10.2",
]

[dependency-groups]
dev = [
    "pytest==9.0.1",
]

[tool.maturin]
module-name = "wren_core"
include = [{ path = "Cargo.lock", format = "sdist" }]
exclude = ["tests/**", "target/**"]
locked = true
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
